fix: set align-items to pokemon grid

--- a/src/components/PokemonContainer/PokemonContainer.module.scss
+++ b/src/components/PokemonContainer/PokemonContainer.module.scss
@@ -61,6 +61,7 @@
     'mainBottom mainBottom'
     'footer footer';
   row-gap: 0.5rem;
+  align-items: center;
 
   &:hover {
     cursor: grab;
